feat(search): add image attachment search
